# home-console-cli

./: .gitignore  CHANGELOG.md  MIGRATION_GO.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini
hc/: __init__.py  api.py  capabilities.py  cli_registry.py  client.py  config.py  constants.py  core_ops.py  core_source.py  diagnostics.py  doctor_lib.py  emergency_db.py  env_bootstrap.py  env_state.py  errors.py  hints.py  json_output.py  main.py  marketplace_operation.py  native_core.py  plugin_cli_loader.py  plugin_validator.py  repl.py  setup_runner.py  shell.py  update_check.py  vault_ops.py
hc/commands/: _client_helpers.py  _compose_helpers.py  action.py  agent.py  auth.py  cli_version.py  cloud.py  completion.py  config_cmd.py  connect.py  core.py  deploy.py  doctor.py  emergency.py  env.py  event.py  install.py  logs.py  marketplace.py  module.py  ping.py  plugin.py  plugin_contract.py  plugin_dev.py  plugin_new.py  plugin_publish.py  (+16 more)
tests/: conftest.py  test_cli_upgrade.py  test_cli_version.py  test_client_errors.py  test_compose_helpers.py  test_compose_prune.py  test_compose_stack_split.py  test_config_cmd.py  test_config_roundtrip.py  test_core_ops.py  test_diagnostics.py  test_doctor_port_stacks.py  test_doctor_scopes.py  test_env_bootstrap.py  test_env_dry_run_and_state.py  test_env_extra_commands.py  test_frontend_compose_setup.py  test_frontend_workspace_check.py  test_main_root_callback.py  test_marketplace_operation_parse.py  test_native_core_helpers.py  test_nav_cli.py  test_port_conflicts.py  test_safe_file_history.py  test_setup_extras.py  test_setup_runner.py  test_setup_subcommands.py  test_update_check.py  test_vault_ops.py  test_workspace_resolve.py
(+58 files in other folders)
