[project]
name = "homeconsole-cli"
version = "0.0.29"
description = "HomeConsole CLI (hc) — управление платформой через HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13,<15",
  "httpx>=0.27,<1.0",
  "anyio>=4,<5",
  "prompt_toolkit>=3,<4",
  "tomlkit>=0.12,<1.0",
  "questionary>=2.0,<3.0",
  "bcrypt>=4.0,<5.0",
  "cryptography>=40,<44",
  "websockets>=12,<15",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hc*"]
exclude = ["backups*", "tests*"]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
hc = "hc.main:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

